# OOP-lab3

./: CMakeLists.txt
include/: Figure.h  Hexagon.h  Pentagon.h  Rhombus.h  figure.h  hexagon.h  pentagon.h  rhombus.h
src/: Array.cpp  Figure.cpp  Hexagon.cpp  Pentagon.cpp  Rhombus.cpp  hexagon.cpp  main.cpp  pentagon.cpp  rhombus.cpp
test/: main_test.cpp  test.cpp
